--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -8,6 +8,8 @@
 	
 	
 	properties:{
+		
+		equipped_abilities: { type: "[class ability]", init: "lib.game.player_abilities" },
 	
 	#-------Attack Timers-------#
 		last_attacked: {
@@ -124,6 +126,13 @@
 	
 	
 	on_process:"[
+		map(equipped_abilities,
+			if(mana >= value.mana_cost and value.should_start(me), [
+				debug(['START ABILITY', value.name]),
+				add(mana, -value.mana_cost),
+				set(animation, value.animation),
+			])),
+
 		//------------------------------WALKING----------------------------------
 		if(ctrl_right and is_standing and punch_finished and not animation in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations, [
 			set(facing,1),
